--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -157,8 +157,8 @@ jobs:
           sudo sed -i 's/bookworm/trixie/g' rootfs/etc/apt/sources.list.d/mobian.list
           echo "⬆️ 升级到 Debian 13 (Trixie)..."
           sudo chroot rootfs /bin/bash -c "apt update && apt dist-upgrade -y --no-install-recommends -o Dpkg::Options::='--force-confdef' -o Dpkg::Options::='--force-confold' && apt autoclean"
-          sudo chroot rootfs /bin/bash -c "apt install hostapd"
-          sudo chroot rootfs /bin/bash -c "apt autoremove"
+          sudo chroot rootfs /bin/bash -c "apt install -y hostapd"
+          sudo chroot rootfs /bin/bash -c "apt autoremove -y"
         fi
         sudo chroot rootfs /bin/bash -c "rm -f /etc/resolv.conf"
         sudo chroot rootfs /bin/bash -c "rm -rf /var/lib/apt/lists/*"
