--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -153,8 +153,8 @@ jobs:
           sudo rm -rf rootfs/*
           sudo apt update
           sudo apt install -y debootstrap qemu-user-static binfmt-support
-          if [[ -f "$PKG_LIST_FILE" ]]; then
-            PKGS=$(grep -vE '^\s*#' "$PKG_LIST_FILE" | tr '\n' ',' | sed 's/,$//')
+          if [[ -f $GITHUB_WORKSPACE/workspace/packages.txt ]]; then
+            PKGS=$(grep -vE '^\s*#' $GITHUB_WORKSPACE/workspace/packages.txt | tr '\n' ',' | sed 's/,$//')
             echo "📦 将安装的额外包: $PKGS"
           else
             echo "⚠️ 未找到 $PKG_LIST_FILE，跳过 --include"
@@ -166,7 +166,7 @@ jobs:
             sudo debootstrap --foreign --arch=arm64 trixie rootfs http://deb.debian.org/debian
           fi
           sudo cp /usr/bin/qemu-aarch64-static rootfs/usr/bin/
-          sudo chroot "$ROOTFS_DIR" /debootstrap/debootstrap --second-stage
+          sudo chroot rootfs /debootstrap/debootstrap --second-stage
           echo "root:1" | sudo chroot rootfs chpasswd
           sudo chroot rootfs useradd -m -s /bin/bash klipper
           echo "klipper:1" | sudo chroot rootfs chpasswd
