--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -182,9 +182,9 @@ jobs:
           sudo chroot rootfs /bin/bash -c "echo 'deb http://deb.debian.org/debian trixie main contrib non-free non-free-firmware' > /etc/apt/sources.list"
           sudo chroot rootfs /bin/bash -c "echo 'deb http://deb.debian.org/debian trixie-updates main contrib non-free non-free-firmware' >> /etc/apt/sources.list"
           sudo chroot rootfs /bin/bash -c "echo 'deb http://security.debian.org/debian-security trixie-security main contrib non-free non-free-firmware' >> /etc/apt/sources.list"
-          sudo chroot rootfs /bin/bash -c "apt update && apt dist-upgrade -y --no-install-recommends -o Dpkg::Options::='--force-confdef' -o Dpkg::Options::='--force-confold' && apt autoclean"
           sudo chroot rootfs /bin/bash -c "update-locale LANG=en.US.UTF-8"
           sudo chroot rootfs /bin/bash -c "timedatectl set-timezone Asia/Shanghai"
+          sudo chroot rootfs /bin/bash -c "echo 'export TERM=linux' >> /etc/profile"
           sudo chroot rootfs /bin/bash -c "sed -i 'sudo sed -i 's/^#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config" 
           sudo cp $GITHUB_WORKSPACE/workspace/deb/*.deb rootfs/root/
         fi
