--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -168,6 +168,7 @@ jobs:
         sudo chroot rootfs /bin/bash -c "echo 'deb http://deb.debian.org/debian ${{ inputs.debian_version }}-updates main contrib non-free non-free-firmware' >> /etc/apt/sources.list"
         sudo chroot rootfs /bin/bash -c "echo 'deb http://security.debian.org/debian-security ${{ inputs.debian_version }}-security main contrib non-free non-free-firmware' >> /etc/apt/sources.list"
         sudo chroot rootfs /bin/bash -c "echo 'en_US.UTF-8 UTF-8' >> /etc/locale.gen && locale-gen && update-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8"
+        sudo chroot rootfs /bin/bash -c "cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime"
         sudo chroot rootfs /bin/bash -c "echo 'export TERM=xterm-256color' >> /etc/profile"
         sudo chroot rootfs /bin/bash -c "sed -i 's/^#\?PermitRootLogin .*/PermitRootLogin yes/' /etc/ssh/sshd_config"
         sudo cp $GITHUB_WORKSPACE/workspace/deb/*.deb rootfs/root/
