--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -96,7 +96,8 @@ jobs:
         if [ ! -z "${{ inputs.localversion }}" ]; then
           sed -i "s/^CONFIG_LOCALVERSION=\".*\"/CONFIG_LOCALVERSION=\"${{ inputs.localversion }}\"/" .config
         fi
-        make kernelversion
+        KERNEL_VER=$(make kernelversion)
+        echo "kernel_ver=$KERNEL_VER" >> $GITHUB_OUTPUT
 
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
@@ -248,7 +249,7 @@ jobs:
       if: steps.kernel.outputs.status == 'success' && !cancelled()
       uses: actions/upload-artifact@v4
       with:
-        name: kernel-${{ inputs.kernel_version }}-arm64-debs
+        name: kernel-${{ steps.configure.outputs.kernel_ver }}-arm64-debs
         path: |
           artifacts/*
           linux-src/arch/arm64/boot/Image
@@ -258,9 +259,7 @@ jobs:
       id: tag
       if: steps.rootfs.outputs.status == 'success' && steps.bootimg.outputs.status == 'success' && env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
-        echo "release_tag=debian-${{ inputs.debian_version }}-kernel-${{ inputs.kernel_version }}-${{ inputs.rootfs_type }}" >> $GITHUB_OUTPUT
-        touch release.txt
-        [ ${UPLOAD_GOFILE} = true && ${{ steps.gofile.outputs.url }} ] && echo "🔗 [GoFile](${{ steps.gofile.outputs.url }})" >> release.txt
+        echo "release_tag=debian-${{ inputs.debian_version }}-kernel-${{ steps.configure.outputs.kernel_ver }}-${{ inputs.rootfs_type }}" >> $GITHUB_OUTPUT
         echo "status=success" >> $GITHUB_OUTPUT
 
     - name: Upload firmware to release
@@ -270,7 +269,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
-        body_path: release.txt
         files: | 
           rootfs.img
           boot.img
