--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -133,15 +133,16 @@ jobs:
       id: root
       if: steps.kernel.outputs.status == 'success' && !cancelled()
       run: |
+        mkdir -p rootfs 
+        mkdir -p img
         sudo dd if=/dev/zero of=root.img bs=1M count=1536
         if [ "${{ inputs.rootfs_type }}" = "btrfs" ]; then
           sudo mkfs.btrfs -O free-space-tree --metadata single --data single --label "rootfs" -U a7ab80e8-e9d1-e8cd-f157-93f69b1d141e root.img
+          sudo mount -o compress=zstd,defaults,noatime,nospace_cache,commit=1 root.img img/
         else
           sudo mkfs.ext4 -L rootfs -m 0 -O ^has_journal -E lazy_itable_init=0,lazy_journal_init=0 -b 4096 -I 256 root.img
+          sudo mount root.img img/
         fi
-        mkdir -p rootfs 
-        mkdir -p img
-        sudo mount root.img img/
         echo "status=success" >>$GITHUB_OUTPUT
   
     # 7. 生成boot.img
@@ -235,7 +236,10 @@ jobs:
         sudo umount rootfs/sys
         sudo cp -ar rootfs/* img
         if [ "${{ inputs.rootfs_type }}" = "btrfs" ]; then
+          sudo chroot img /bin/bash -c "chattr +C /var/cache"
+          sudo chroot img /bin/bash -c "chattr +C /var/tmp"
           sudo chroot img /bin/bash -c "chattr +C /var/log/journal"
+          sudo chroot img /bin/bash -c "chattr +C /var/log"
         fi
         sudo umount img
         img2simg root.img $GITHUB_WORKSPACE/rootfs.img
