--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -99,7 +99,15 @@ jobs:
         fi
         KERNEL_VER=$(make kernelversion)
         echo "kernel_ver=$KERNEL_VER" >> $GITHUB_OUTPUT
-        if [[ "$(make kernelrelease)" > "6.6" ]]; then
+        if [ -f Makefile ]; then
+          MAJOR=$(grep "^VERSION =" Makefile | awk '{print $3}')
+          MINOR=$(grep "^PATCHLEVEL =" Makefile | awk '{print $3}')
+        else
+          echo "❌ 找不到内核源码 Makefile"
+           exit 1
+        fi
+
+        if [ "$MAJOR" -gt 6 ] || { [ "$MAJOR" -eq 6 ] && [ "$MINOR" -ge 7 ]; }; then
           echo "✅ 内核版本 >= 6.7，需要内置 db.txt"
           REGDB_URL="https://git.kernel.org/pub/scm/linux/kernel/git/sforshee/wireless-regdb.git/plain/db.txt"
           echo "📥 正在下载 db.txt..."
