--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -170,11 +170,18 @@ jobs:
         DEBURL="http://deb.debian.org/debian"
         if [[ "${{ inputs.debian_version }}" == "noble" ]]; then
           DEBURL="http://archive.ubuntu.com/ubuntu"
-        fi
-        if [[ -n "$PKGS" ]]; then
-          sudo debootstrap --arch=arm64 --variant=minbase --include="$PKGS" ${{ inputs.debian_version }} rootfs "$DEBURL"
+          sudo debootstrap --arch=arm64 ${{ inputs.debian_version }} ${{ inputs.debian_version }}.tar "$DEBURL"
+          if [[ -n "$PKGS" ]]; then
+            sudo debootstrap --foreign --arch=arm64 --variant=minbase --include="$PKGS" --unpack-tarball=${{ inputs.debian_version }}.tar rootfs
+          else
+            sudo debootstrap --foreign --arch=arm64 --variant=minbase --unpack-tarball=${{ inputs.debian_version }}.tar rootfs
+          fi
         else
-          sudo debootstrap --arch=arm64 --variant=minbase ${{ inputs.debian_version }} rootfs "$DEBURL"
+          if [[ -n "$PKGS" ]]; then
+            sudo debootstrap --foreign --arch=arm64 --variant=minbase --include="$PKGS" ${{ inputs.debian_version }} rootfs "$DEBURL"
+          else
+            sudo debootstrap --foreign --arch=arm64 --variant=minbase ${{ inputs.debian_version }} rootfs "$DEBURL"
+          fi
         fi
         sudo cp /usr/bin/qemu-aarch64-static rootfs/usr/bin/
         sudo chroot rootfs /debootstrap/debootstrap --second-stage
